--- a/frontend/templates/themes_admin/category_list.html
+++ b/frontend/templates/themes_admin/category_list.html
@@ -15,7 +15,7 @@
                 <div class="card-header">
                     <div class="d-flex justify-content-between align-items-center">
                         Category List
-                        <a href="{% url 'add_category' %}"><button type="button" class="btn btn-list"><i
+                        <a href="{% url 'creation_categorie' %}"><button type="button" class="btn btn-list"><i
                                     class="fa fa-plus-square-o"></i> &nbsp;Add Category</button></a>
                     </div>
                 </div>
