--- a/frontend/templates/themes_admin/edit_category.html
+++ b/frontend/templates/themes_admin/edit_category.html
@@ -87,9 +87,9 @@
                         data-parent="#accordionExample">
                         <div class="card-body">
                             <ul>
-                                <li><a href="{% url 'add_category' %}">Add Category</a></li>
+                                <li><a href="{% url 'creation_categorie' %}">Add Category</a></li>
                                 <li><a href="{% url 'liste_category' %}">Category List</a></li>
-                                <li><a href="{% url 'add_medicine' %}">Add Medicine</a></li>
+                                <li><a href="{% url 'creation_medicament' %}">Add Medicine</a></li>
                                 <li><a href="{% url 'liste_medicaments' %}">Medicine List</a></li>
 
                             </ul>
