--- a/frontend/templates/themes_admin/medicine_grid.html
+++ b/frontend/templates/themes_admin/medicine_grid.html
@@ -23,9 +23,9 @@
                         Medicine Grid
                     </div>
                     <div class="p-2 bd-highlight">
-                        <a href="{% url 'medicine_list' %}"><button type="button" class="btn btn-list"><i
+                        <a href="{% url 'liste_medicaments' %}"><button type="button" class="btn btn-list"><i
                                     class="	fa fa-list-ul"></i> &nbsp;List View</button></a>
-                        <a href="{% url 'add_medicine' %}"><button type="button" class="btn btn-list"><i
+                        <a href="{% url 'creation_medicament' %}"><button type="button" class="btn btn-list"><i
                                     class="fa fa-plus-square-o"></i> &nbsp;Add Medicine</button></a>
                     </div>
                 </div>
