--- a/frontend/templates/themes_admin/show_details.html
+++ b/frontend/templates/themes_admin/show_details.html
@@ -20,7 +20,7 @@
                     </div>
                     <div class="p-2 bd-highlight">
                         <a href="{% url 'medicine_grid' %}"><button type="button" class="btn btn-list"><i class="fa fa-th"></i> &nbsp;Grid View</button></a>
-                        <a href="{% url 'add_medicine' %}"><button type="button" class="btn btn-list"><i class="fa fa-plus-square-o"></i> &nbsp;Add Medicine</button></a>
+                        <a href="{% url 'creation_medicament' %}"><button type="button" class="btn btn-list"><i class="fa fa-plus-square-o"></i> &nbsp;Add Medicine</button></a>
                     </div>
                 </div>
                 <div class="card-body">
