--- a/frontend/templates/themes_client/shop-single.html
+++ b/frontend/templates/themes_client/shop-single.html
@@ -1,6 +1,44 @@
 {% extends "themes_client/index.html" %}
 {% block content %}
 {%  load static %}
+<style>
+  .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; 
+    max-width: 600px;
+    text-align: center;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+</style>
 <body>
 
   <div class="site-wrap">
@@ -8,116 +46,42 @@
     <div class="bg-light py-3">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 mb-0"><a href="index.html">Home</a> <span class="mx-2 mb-0">/</span> <a
-              href="shop.html">Store</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">Ibuprofen Tablets, 200mg</strong></div>
+          <div class="col-md-12 mb-0"><a href="{% url 'liste_medicaments_client' %}">Home</a> <span class="mx-2 mb-0">/</span> <a
+              href="shop.html">Store</a> <span class="mx-2 mb-0">/</span> <strong class="text-black">{{ medicament.nomMedicament }}</strong></div>
         </div>
       </div>
     </div>
 
     <div class="site-section">
       <div class="container">
-        <div class="row">
-          <div class="col-md-5 mr-auto">
-            <div class="border text-center">
-              <img src="{% static 'themes_client/images/product_07_large.png' %}" alt="Image" class="img-fluid p-5">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <h2 class="text-black">Ibuprofen Tablets, 200mg</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, vitae, explicabo? Incidunt facere, natus
-              soluta dolores iusto! Molestiae expedita veritatis nesciunt doloremque sint asperiores fuga voluptas,
-              distinctio, aperiam, ratione dolore.</p>
-            
-
-            <p><del>$95.00</del>  <strong class="text-primary h4">$55.00</strong></p>
-
-            
-            
-            <div class="mb-5">
-              <div class="input-group mb-3" style="max-width: 220px;">
-                <div class="input-group-prepend">
-                  <button class="btn btn-outline-primary js-btn-minus" type="button">&minus;</button>
-                </div>
-                <input type="text" class="form-control text-center" value="1" placeholder=""
-                  aria-label="Example text with button addon" aria-describedby="button-addon1">
-                <div class="input-group-append">
-                  <button class="btn btn-outline-primary js-btn-plus" type="button">&plus;</button>
-                </div>
+          <div class="row">
+              <div class="col-md-5 mr-auto">
+                  <div class="border text-center ">
+                      {% if medicament.image and medicament.image.url %}
+                          <img src="{{ medicament.image.url }}" alt="{{ medicament.nomMedicament }}" class="img-fluid p-5">
+                      {% else %}
+                          Image non disponible
+                      {% endif %}
+                  </div>
               </div>
-    
-            </div>
-            <p><a href="cart.html" class="buy-now btn btn-sm height-auto px-4 py-3 btn-primary">Add To Cart</a></p>
-
-            <div class="mt-5">
-              <ul class="nav nav-pills mb-3 custom-pill" id="pills-tab" role="tablist">
-                <li class="nav-item">
-                  <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
-                    aria-controls="pills-home" aria-selected="true">Ordering Information</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
-                    aria-controls="pills-profile" aria-selected="false">Specifications</a>
-                </li>
+              <div class="col-md-6">
+                  <h2 class="text-black">{{ medicament.nomMedicament }}</h2>
+                  <p>{{ medicament.libelle }}</p>
+                  <p><del>{{ medicament.prixUnitaire }}</del>  <strong class="text-primary h4">{{ medicament.prixUnitaire }}</strong></p>
             
-              </ul>
-              <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                  <table class="table custom-table">
-                    <thead>
-                      <th>Material</th>
-                      <th>Description</th>
-                      <th>Packaging</th>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <th scope="row">OTC022401</th>
-                        <td>Pain Management: Acetaminophen PM Extra-Strength Caplets, 500 mg, 100/Bottle</td>
-                        <td>1 BT</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">OTC022401</th>
-                        <td>Pain Management: Acetaminophen PM Extra-Strength Caplets, 500 mg, 100/Bottle</td>
-                        <td>144/CS</td>
-                      </tr>
-                      <tr>
-                        <th scope="row">OTC022401</th>
-                        <td>Pain Management: Acetaminophen PM Extra-Strength Caplets, 500 mg, 100/Bottle</td>
-                        <td>1 EA</td>
-                      </tr>
-                      
-                    </tbody>
-                  </table>
-                </div>
-                <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
             
-                  <table class="table custom-table">
             
-                    <tbody>
-                      <tr>
-                        <td>HPIS CODE</td>
-                        <td class="bg-light">999_200_40_0</td>
-                      </tr>
-                      <tr>
-                        <td>HEALTHCARE PROVIDERS ONLY</td>
-                        <td class="bg-light">No</td>
-                      </tr>
-                      <tr>
-                        <td>LATEX FREE</td>
-                        <td class="bg-light">Yes, No</td>
-                      </tr>
-                      <tr>
-                        <td>MEDICATION ROUTE</td>
-                        <td class="bg-light">Topical</td>
-                      </tr>
-                    </tbody>
-                  </table>
-            
-                </div>
-            
-              </div>
-            </div>
-
-    
+                  <form action="{% url 'upload_ordonnance' %}" method="post" enctype="multipart/form-data" id="uploadForm">
+                    {% csrf_token %}
+                    <p>
+                        <button type="button" class="btn btn-sm height-auto px-4 py-3 btn-primary" onclick="document.getElementById('cameraInput').click();">
+                            Scanner un fichier
+                        </button>
+                        <span id="file-name"></span>
+                    </p>
+                    <!-- Input de type file avec attribut capture pour déclencher la caméra -->
+                    <input type="file" id="cameraInput" name="image" style="display:none;" accept="image/*" capture onchange="handleFileSelect(event)">
+                  </form>
           </div>
         </div>
       </div>
@@ -148,7 +112,54 @@
       </div>
     </div>
   </div>
+  <!-- Fenêtre modale pour l'aperçu de l'image -->
+  <div id="previewModal" class="modal" style="display:none;">
+    <div class="modal-content">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img id="previewImage" src="#" alt="Aperçu de l'image" class="img-fluid">
+        <!-- Template HTML -->
+        
+        <button type="button" class="btn btn-primary mt-3" onclick="sendData()">Valider</button>
+
+        
+    </div>
+  </div>
 </body>
+
+<script>
+  function handleFileSelect(event) {
+      const file = event.target.files[0];
+      if (file) {
+          // Afficher le nom du fichier dans le span avec l'ID 'file-name'
+          document.getElementById('file-name').textContent = "Fichier sélectionné : " + file.name;
+
+          // Afficher l'aperçu de l'image dans la fenêtre modale
+          const reader = new FileReader();
+          reader.onload = function(e) {
+              document.getElementById('previewImage').src = e.target.result;
+              openModal();
+          };
+          reader.readAsDataURL(file);
+      }
+  }
+
+  function openModal() {
+      document.getElementById('previewModal').style.display = "block";
+  }
+
+  function closeModal() {
+      document.getElementById('previewModal').style.display = "none";
+  }
+
+  
+function sendData() {
+  document.getElementById('uploadForm').submit();
+  alert("Données envoyées !");
+    // Fermez la fenêtre modale après avoir envoyé les données (si nécessaire)
+    closeModal();
+}
+</script>
+
 
 {% endblock%}
 
