--- a/frontend/templates/themes_client/index.html
+++ b/frontend/templates/themes_client/index.html
@@ -54,7 +54,7 @@
         <div class="d-flex align-items-center justify-content-between">
           <div class="logo">
             <div class="site-logo">
-              <a href="{% url 'liste_medicaments_client' %}" class="js-logo-clone">Pharma</a>
+              <a href="{% url 'liste_medicaments_client' %}" class="js-logo-clone">Pharmappppppppppp</a>
             </div>
           </div>
           <div class="main-nav d-none d-lg-block">
